update example configs for use with driver

--- a/examples/pp-params.toml
+++ b/examples/pp-params.toml
@@ -1,5 +1,6 @@
-[verilog]
-source-file = "pp-params.cbor"
+[src.main]
+type = "verilog"
+src-files = ["examples/pp-params.sv"]
 
 [constraints]
 force-module-defaults = ["top"]
