--- a/examples/piccolo.toml
+++ b/examples/piccolo.toml
@@ -3,7 +3,7 @@
 type = "verilog"
 src-files = [
     "../gfe/bluespec-processors/P1/Piccolo/src_Core/*/*.bsv",
-    "../gfe/bluespec-processors/P1/Piccolo/src_SSITH_P1/src_BSV/*.bsv",
+    #"../gfe/bluespec-processors/P1/Piccolo/src_SSITH_P1/src_BSV/*.bsv",
 ]
 
 # Feature-model synthesis configuration
@@ -12,7 +12,9 @@ list-features-command = "./driver %c list-pp-flags"
 oracle-command = "examples/piccolo/check-config.sh %i"
 oracle-cache-file = "examples/piccolo/oracle.cache"
 init-tests-file = "examples/piccolo/init-tests.rktd"
-max-groups = 4
-max-dependencies = 2
+resume-tests-file = "examples/piccolo/resume-tests.rktd"
+max-groups = 5
+max-dependencies = 4
+boredom-threshold = 5000
 out-file = "examples/piccolo/piccolo.cfr"
 
