--- a/examples/piccolo.toml
+++ b/examples/piccolo.toml
@@ -1,6 +1,6 @@
 [src.piccolo]
 # BSV isn't supported yet, but the Verilog preprocessor handling works on it.
-type = "verilog"
+type = "bsv"
 src-files = [
     "../gfe/bluespec-processors/P1/Piccolo/src_Core/*/*.bsv",
     #"../gfe/bluespec-processors/P1/Piccolo/src_SSITH_P1/src_BSV/*.bsv",
