featuresynth: discard resume-tests that failed (or currently fail) hard-constraints

--- a/examples/piccolo.toml
+++ b/examples/piccolo.toml
@@ -40,7 +40,7 @@ list-features-command = "./driver %c list-pp-flags"
 oracle-command = "examples/piccolo/check-config.sh %c %i"
 #oracle-cache-file = "examples/piccolo/oracle.cache"
 init-tests-file = "examples/piccolo/init-tests.rktd"
-#resume-tests-file = "examples/piccolo/resume-tests.rktd"
+resume-tests-file = "examples/piccolo/resume-tests.rktd"
 max-groups = 3
 max-dependencies = 3
 out-file = "piccolo.cfr"
