featuresynth: add remaining simplify strategies

--- a/examples/piccolo.toml
+++ b/examples/piccolo.toml
@@ -48,8 +48,8 @@ out-file = "piccolo.cfr"
 hard-constraints = [
     "(! CSR_REGFILE_MIN)",
     "(! EXTERNAL_DEBUG_MODULE)",
-    "(! FABRIC32)",
-    "FABRIC64",
+#    "(! FABRIC32)",
+#    "FABRIC64",
     "(! HTIF_MEMORY)",
     "(! INCLUDE_ACCEL0)",
     "(! INCLUDE_CAMERA_MODEL)",
@@ -75,9 +75,9 @@ hard-constraints = [
     "(! RV128)",
     "RV32",
     "(! RV64)",
-    "SHIFT_BARREL",
-    "(! SHIFT_MULT)",
-    "(! SHIFT_SERIAL)",
+#    "SHIFT_BARREL",
+#    "(! SHIFT_MULT)",
+#    "(! SHIFT_SERIAL)",
     "(! SV34)",
     "(! SV39)",
     "(! Sv32)",
