remove more features from piccolo.toml hard-constraints

--- a/examples/piccolo.toml
+++ b/examples/piccolo.toml
@@ -64,17 +64,17 @@ hard-constraints = [
     "(! ISA_FD_DIV)",
     "(! ISA_F_OR_D)",
 #    "ISA_M",
-    "(! ISA_N)",
-    "(! ISA_PRIV_S)",
+#    "(! ISA_N)",
+#    "(! ISA_PRIV_S)",
 #    "ISA_PRIV_U",
     "(! IVERILOG)",
 #    "(! MULT_SERIAL)",
 #    "MULT_SYNTH",
     "Near_Mem_Caches",
     "(! Near_Mem_TCM)",
-    "(! RV128)",
-    "RV32",
-    "(! RV64)",
+#    "(! RV128)",
+#    "RV32",
+#    "(! RV64)",
 #    "SHIFT_BARREL",
 #    "(! SHIFT_MULT)",
 #    "(! SHIFT_SERIAL)",
