--- a/examples/rocket-p1.toml
+++ b/examples/rocket-p1.toml
@@ -15,11 +15,12 @@ draw-ext-ports = true
 draw-logic-ports = true
 dedup-edges = true
 shorten-net-names = true
+draw-onesided-nets = false
 
 
 # Feature-model synthesis configuration
 [featuresynth]
-list-features-command = "python3 rocket-chip-check-config/check.py list"
+list-features-command = "examples/rocket-p1/list-features.sh"
 oracle-command = "examples/rocket-p1/check-config.sh"
 #oracle-cache-file = "examples/rocket-p1/oracle.cache"
 init-tests-file = "examples/rocket-p1/init-tests.rktd"
@@ -28,6 +29,7 @@ max-groups = 4
 max-dependencies = 6
 out-file = "rocket-p1.fm.json"
 reason-threshold = 10
+boredom-threshold = 2000
 
 hard-constraints = [
     "galois.subsystem.WithRV32",
