arch: more graphviz customization options

--- a/examples/rocket-p1.toml
+++ b/examples/rocket-p1.toml
@@ -12,7 +12,9 @@ blackbox-modules = [ "TLDebugModuleInner" ]
 draw-nets = false
 draw-logics = false
 draw-ext-ports = true
-draw-logic-ports = true
+draw-logic-ports = false
+draw-muxes = "collapse"
+draw-repacks = "fwd-only"
 dedup-edges = true
 shorten-net-names = true
 draw-onesided-nets = false
