--- a/examples/piccolo.toml
+++ b/examples/piccolo.toml
@@ -29,9 +29,12 @@ root-module = "Top_HW_Side.mkTop_HW_Side"
 draw-nets = false
 draw-logics = false
 draw-ext-ports = true
-draw-logic-ports = true
+draw-logic-ports = false
+draw-muxes = "collapse"
+draw-repacks = "fwd-only"
 dedup-edges = true
 shorten-net-names = true
+draw-onesided-nets = false
 
 
 # Feature-model synthesis configuration
